bootstrapped dashboard page

--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -223,9 +223,20 @@ img.spinner {
 
 }
 
+#dashboard {
+  background-color: #ff794c;
+  /*background-image: url("https://lh6.googleusercontent.com/-LIIlaHQKGAE/VQ73lhHp8UI/AAAAAAAAAT8/qMFC6e6oF1E/w1754-h1168-no/fitcity%2Bdashboard%2Bbackground.png");*/
+  background-size: contain;
+  color: white;
+  font-family: oswald;
+
+}
+
 #leaderboard {
-  background-image: url("https://lh3.googleusercontent.com/-eiJlaQKhe6c/VQdZN1VwULI/AAAAAAAAAQk/29OfqzKfBVw/w1916-h1278-no/landing%2Bpage%2Bbkgnd.png");
-  background-size: cover;
+  background-image: url("https://lh6.googleusercontent.com/-LIIlaHQKGAE/VQ73lhHp8UI/AAAAAAAAAT8/qMFC6e6oF1E/w1754-h1168-no/fitcity%2Bdashboard%2Bbackground.png");
+  background-size: contain;
+  /*background-image: url("https://lh3.googleusercontent.com/-eiJlaQKhe6c/VQdZN1VwULI/AAAAAAAAAQk/29OfqzKfBVw/w1916-h1278-no/landing%2Bpage%2Bbkgnd.png");
+  background-size: cover;*/
   color: #efefef;
   font-family: oswald;
 
@@ -284,6 +295,16 @@ table {
  td {
   font-size: 16px;
 
+
+ }
+
+#user_name a{
+  color: #ff794c;
+}
+
+ td a{
+  color: white;
+  line-height: 30px;
  }
 
 
