--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
 
 <!-- <ul class="nav nav-tabs"> -->
   
-  <nav class="navbar navbar-left">
+  <nav class="navbar navbar-right">
     <ul class="nav nav-tabs">
   <li role="presentation" >
     <% if current_user %>
