--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -234,7 +234,7 @@ img.spinner {
 
 #leaderboard {
   background-image: url("https://lh6.googleusercontent.com/-LIIlaHQKGAE/VQ73lhHp8UI/AAAAAAAAAT8/qMFC6e6oF1E/w1754-h1168-no/fitcity%2Bdashboard%2Bbackground.png");
-  background-size: contain;
+  background-size: cover;
   /*background-image: url("https://lh3.googleusercontent.com/-eiJlaQKhe6c/VQdZN1VwULI/AAAAAAAAAQk/29OfqzKfBVw/w1916-h1278-no/landing%2Bpage%2Bbkgnd.png");
   background-size: cover;*/
   color: #efefef;
