--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -34,6 +34,9 @@ ul.dashboard-head {
 
 .button:focus {
   outline: none;
+  background: #2c2c2e;
+  color: white;
+  border: 4px solid #2c2c2e;
 }
 
 .button:hover {
@@ -43,7 +46,9 @@ ul.dashboard-head {
 }
 
 ul.share-buttons {
-  margin-left: 10%;
+  /*margin-left: 10%;*/
+  margin-left: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -53,7 +58,7 @@ ul.share-buttons {
 }
 
 .dashboard-section {
-  width: 80%;
+  width: 100%;
   height: auto;
   margin: 0 auto;
 }
@@ -70,9 +75,10 @@ ul.share-buttons {
   }*/
 
 #walks {
-  /*background-color: #05A9F4;*/
   background-color: #1faaf1;
-  min-height: 600px;
+  min-height: 450px;
+  /* larger min-height -- switch back if you go back to larger sizes*/
+  /*min-height: 600px;*/
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
   margin-bottom: 40px;
@@ -81,9 +87,13 @@ ul.share-buttons {
 .miles-progress {
   position: relative;
   float: left;
-  height: 460px;
-  width: 172px;
-  margin: 40px 20px;
+  height: 368px;
+  width: 138px;
+  margin: 25px 12px;
+  /* larger dimensions from earlier -- also resize min-height of #buildings if you go back to the larger sizes */
+  /*  height: 460px;
+  width: 172px;*/
+  /*margin: 40px 20px;*/
 }
 
 .walk {
@@ -122,9 +132,9 @@ ul.share-buttons {
 
 #buildings {
   background-color: #94d337;
-  /*background-color: #8ADF18;*/
-  /*background-color: #8DE12B;*/
-  min-height: 600px;
+  min-height: 450px;
+  /* revert to 600px min-height if you go back to the larger animation sizes */
+  /*min-height: 600px;*/
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
   margin-bottom: 40px;
@@ -133,9 +143,13 @@ ul.share-buttons {
 .floors-progress {
   position: relative;
   float: left;
-  height: 460px;
+  height: 368px;
+  width: 115px;
+  margin: 25px 12px;
+  /*larger dimensions from earlier -- need to resize #buildings as well if you go back to the larger size*/
+  /*height: 460px;
   width: 144px;
-  margin: 40px 20px;
+  margin: 40px 20px;*/
 /*  top: 4%;
   height: 96%;
   width: 60%;*/
@@ -178,7 +192,8 @@ ul.share-buttons {
 
 #wine {
   background-color: #FFA000;
-  min-height: 600px;
+  min-height: 300px;
+  /*min-height: 600px;*/
   border-top-left-radius: 50px;
   border-top-right-radius: 50px;
 }
@@ -304,6 +319,10 @@ table {
   font-size: 16px;
  }
 
+ table {
+  margin-bottom: 15px;
+ }
+
 #user_name a{
   color: #fd6f43;
 }
@@ -353,6 +372,7 @@ td a:hover {
 #get-data-month {
   width: 100px;
 }
+
 
 
 
