fix winebottle javascript animation on the scroll

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -23,8 +23,8 @@
     <img class='avatar' src="<%=current_user.avatar%>">
     <h3> Welcome, <%= current_user.name %>!</h3>
   </br></br></br>
-      <a id="links" href="https://www.facebook.com/fitcity.fitbit?ref=hl"> Like us on Facebook! </a> </br>
-      <a id="links" href="https://twitter.com/FitcityApp"> Follow us on Twitter! </br> @FitcityApp</a>
+      <a id="links" href="https://www.facebook.com/fitcity.fitbit?ref=hl" target="_blank"> Like us on Facebook! </a> </br>
+      <a id="links" href="https://twitter.com/FitcityApp" target="_blank"> Follow us on Twitter! </br> @FitcityApp</a>
 
      </div> 
 
