--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -27,6 +27,9 @@
   <% end %> 
 </ul>
 
+</br></br>
+      <a id="links" href="https://www.facebook.com/fitcity.fitbit?ref=hl" target="_blank"> Like us on Facebook!</a> </br>
+      <a id="links" href="https://twitter.com/FitcityApp" target="_blank"> Follow us on Twitter!</br> @FitcityApp</a>
 </div>
 
 
