Added login and signup feature on /users/#

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,8 +28,8 @@
   <li role="presentation" >
     <%= link_to "Log Out", logout_path%> 
     <% else %>
-    <%= link_to "log in", login_path %>
-    <%= link_to "sign up", signup_path %>
+    <%= link_to "log in", welcome_url %>
+    <%= link_to "sign up", welcome_url %>
     <% end %> 
   </li>
     <p id="notice"><%= notice %></p>
